[gd_scene load_steps=5 format=3 uid="uid://bv2imx6j55t0y"]

[ext_resource type="Script" uid="uid://bfepxxruece25" path="res://scripts/cardnode.gd" id="1_kg30u"]
[ext_resource type="Texture2D" uid="uid://baiwhq652hvja" path="res://card_related/card.png" id="2_sy11y"]
[ext_resource type="Texture2D" uid="uid://d0qswv4al43ps" path="res://card_related/clubs.png" id="3_6ligt"]
[ext_resource type="FontFile" uid="uid://5froqex1ci6j" path="res://fonts/pixel_font.ttf" id="4_8w5pg"]

[node name="Card" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kg30u")

[node name="CardSprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_sy11y")

[node name="TopRightSuit" type="Sprite2D" parent="CardSprite"]
texture_filter = 1
position = Vector2(70, -80)
texture = ExtResource("3_6ligt")

[node name="TopLeftSuit" type="Sprite2D" parent="CardSprite"]
position = Vector2(-70, -80)
scale = Vector2(0.9959757, 1.002987)
texture = ExtResource("3_6ligt")

[node name="BottomRightSuit" type="Sprite2D" parent="CardSprite"]
position = Vector2(70, 80)
rotation = 3.1415927
texture = ExtResource("3_6ligt")

[node name="BottomLeftSuit" type="Sprite2D" parent="CardSprite"]
position = Vector2(-70, 80)
rotation = 3.1415927
texture = ExtResource("3_6ligt")

[node name="MiddleSuit" type="Sprite2D" parent="CardSprite"]
position = Vector2(2, 0)
scale = Vector2(2, 2.0269775)
texture = ExtResource("3_6ligt")

[node name="TopLeftNumber" type="Label" parent="CardSprite"]
texture_filter = 1
offset_left = -80.0
offset_top = -117.0
offset_right = -40.0
offset_bottom = -93.0
scale = Vector2(0.9659168, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_8w5pg")
theme_override_font_sizes/font_size = 27
text = "1"

[node name="TopRightNumber" type="Label" parent="CardSprite"]
texture_filter = 1
offset_left = 60.0
offset_top = -117.0
offset_right = 100.0
offset_bottom = -66.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_8w5pg")
theme_override_font_sizes/font_size = 27
text = "1
"

[node name="BottomLeftNumber" type="Label" parent="CardSprite"]
texture_filter = 1
offset_left = -60.0
offset_top = 117.0
offset_right = -20.0
offset_bottom = 141.0
rotation = 3.1415927
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_8w5pg")
theme_override_font_sizes/font_size = 27
text = "1"

[node name="BottomRightNumber" type="Label" parent="CardSprite"]
texture_filter = 1
offset_left = 70.0
offset_top = 117.0
offset_right = 110.0
offset_bottom = 155.0
rotation = 3.1415927
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_8w5pg")
theme_override_font_sizes/font_size = 27
text = "1"
